--- a/package.json
+++ b/package.json
@@ -5,23 +5,26 @@
   "repository": "https://github.com/anthill/bordeaux3d",
   "main": "index.js",
   "scripts": {
+    "build": "browserify front/src/main.js -o front/app.js -d",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify front/src/main.js -o front/app.js -d -v"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "dat-gui": "~0.5.0",
+    "browserify": "^5.0.0",
+    "dat-gui": "^0.5.0",
     "es6-promise": "^1.0.0",
     "express": "^4.8.3",
     "socket.io": "^1.0.6",
-    "socket.io-client": "~1.0.6",
+    "socket.io-client": "^1.0.6",
     "suncalc": "^1.5.2",
-    "three": "~0.68.0",
-    "es6-map": "~0.1.0",
-    "dat-gui": "~0.5.0",
-    "rbush": "~1.3.2",
-    "event-emitter": "~0.3.1"
+    "three": "^0.68.0",
+    "es6-map": "^0.1.0",
+    "dat-gui": "^0.5.0",
+    "rbush": "^1.3.2",
+    "event-emitter": "^0.3.1"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -30,12 +33,12 @@
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
     "typescript": "^1.0.1",
-    "unzip": "~0.1.9",
-    "commander": "~2.3.0",
-    "tmp": "0.0.24",
-    "q": "~1.0.1",
-    "glob": "~4.0.5",
-    "graceful-fs": "~3.0.2",
+    "unzip": "^0.1.9",
+    "commander": "^2.3.0",
+    "tmp": "^0.0.24",
+    "q": "^1.0.1",
+    "glob": "^4.0.5",
+    "graceful-fs": "^3.0.2",
     "watchify": "^1.0.2"
   }
 }
