--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "license": "MIT",
   "dependencies": {
     "dat-gui": "~0.5.0",
+    "es6-map": "~0.1.0",
     "es6-promise": "^1.0.0",
+    "es6-promisify": "^1.1.1",
+    "event-emitter": "~0.3.1",
     "express": "^4.8.3",
+    "rbush": "~1.3.2",
     "socket.io": "^1.0.6",
     "socket.io-client": "~1.0.6",
     "suncalc": "^1.5.2",
     "three": "~0.68.0",
-    "es6-map": "~0.1.0",
-    "dat-gui": "~0.5.0",
-    "rbush": "~1.3.2",
-    "event-emitter": "~0.3.1"
+    "xmldom": "^0.1.19"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
