--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Bordeaux-3d",
+  "name": "bordeaux3d-core",
   "version": "0.1.0",
   "description": "A simple implementation of the backend for the bordeaux3d project",
-  "repository": "https://github.com/anthill/bordeaux3d",
+  "repository": "https://github.com/anthill/bordeaux3d-core",
   "main": "index.js",
   "scripts": {
     "build": "browserify front/src/main.js -o front/app.js -d",
@@ -31,7 +31,8 @@
     "suncalc": "^1.5.2",
     "three": "^0.68.0",
     "xmldom": "^0.1.19",
-    "csv-parse": "0.0.6"
+    "csv-parse": "0.0.6",
+    "bordeaux3d-blocks": "git://github.com/anthill/bordeaux3d-blocks.git"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
