--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "repository": "https://github.com/anthill/bordeaux3d-core",
   "main": "index.js",
   "scripts": {
-    "build": "browserify front/src/main.js -o front/app.js -d",
-    "start": "node server.js dev",
-    "start-dev": "node server.js dev",
+    "build": "browserify core-client/client.js -o core-client/app.js -d -v",
+    "start": "node server.js dev core-client",
+    "start-dev": "node server.js dev core-client",
     "start-prod": "node server.js prod",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify front/src/main.js -o front/app.js -d -v"
+    "watch": "watchify core-client/client.js -o core-client/app.js -d -v"
   },
   "author": "",
   "license": "MIT",
