--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "bordeaux3d-core",
+  "name": "city-core",
   "version": "0.1.0",
   "description": "A simple implementation of the backend for the bordeaux3d project",
-  "repository": "https://github.com/anthill/bordeaux3d-core",
+  "repository": "https://github.com/anthill/city-core",
   "main": "front/src/index.js",
   "scripts": {
     "build": "browserify core-client/client.js -o core-client/app.js -d",
@@ -12,7 +12,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify core-client/client.js -o core-client/app.js -d -v"
   },
-  "author": "",
+  "author": "Ants",
   "license": "MIT",
   "dependencies": {
     "browserify": "^5.0.0",
@@ -24,29 +24,22 @@
     "es6-set": "~0.1.0",
     "event-emitter": "^0.3.1",
     "express": "^4.8.3",
+    "graceful-fs": "^3.0.2",
     "jsdom": "^1.0.1",
     "rbush": "^1.3.2",
     "socket.io": "^1.0.6",
     "socket.io-client": "^1.0.6",
     "suncalc": "^1.5.2",
     "three": "^0.68.0",
-    "xmldom": "^0.1.19",
     "csv-parse": "0.0.6",
     "city-blocks": "git://github.com/anthill/city-blocks.git"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "typescript": "^1.0.1",
     "unzip": "^0.1.9",
     "commander": "^2.3.0",
     "tmp": "^0.0.24",
     "q": "^1.0.1",
     "glob": "^4.0.5",
-    "graceful-fs": "^3.0.2",
     "watchify": "^1.0.2"
   }
 }
