--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "description": "A simple implementation of the backend for the bordeaux3d project",
   "repository": "https://github.com/anthill/city-core",
-  "main": "front/src/index.js",
+  "main": "front/index.js",
+  "bin": {
+    "start-city-server": "./server/index.js",
+    "unzipCUB3ds": "./tools/unzipCUB3ds.js"
+  },
   "scripts": {
-    "build": "browserify core-client/client.js -o core-client/app.js -d",
-    "start": "node server.js dev core-client",
-    "start-dev": "node server.js dev core-client",
-    "start-prod": "node server.js prod core-client",
+    "build": "browserify example/client.js -o example/app.js -d",
+    "start": "node server/index.js dev example",
+    "start-dev": "node server/index.js dev example",
+    "start-prod": "node server/index.js prod example",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "watchify core-client/client.js -o core-client/app.js -d -v"
+    "watch": "watchify example/client.js -o example/app.js -d -v"
   },
   "author": "Ants",
   "license": "MIT",
