--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "browserify example/client.js -o example/app.js -d",
     "start": "node server/index.js dev example",
     "start-app": "node example/server.js",
-    "start-api-dev": "node server/index.js dev example",
-    "start-api-prod": "node server/index.js prod example",
+    "start-api-dev": "node server/index.js dev ./example",
+    "start-api-prod": "node server/index.js prod /data/city-core",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "watchify example/client.js -o example/app.js -d -v"
   },
